--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
          <nav>
-            <h3>G3 Architects</h3>
+            <h3 class="nav-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -17,6 +17,17 @@
                 <li><a href="">Login</a></li>
             </ul>
          </nav>
+         <div class="banner">
+           <div class="banner-content">
+            <h1 class="banner-title">Brand New Group of Architect</h1>
+         
+            <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor earum rem tempore, corrupti in non adipisci possimus, voluptatibus velit mollitia maxime dicta necessitatibus, dolorum perferendis? Mollitia autem nam cupiditate ducimus!</p>
+   
+            <button class="btn-primary">Explore More</button>
+           </div>
+
+         <img src="images/banner.png" alt="">
+        </div>
     </header>
     <main>
 
