--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/architect.css" class="css">
 </head>
 <body>
+    <!-- Header Start-->
     <header>
          <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -29,7 +30,27 @@
          <img src="images/banner.png" alt="">
         </div>
     </header>
+    <!---Header End-->
     <main>
+        <!----Feature Section---->
+        <section class="teams-container">
+            <div class="teams-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+
+            </div>
+
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="list-quick">Quick List </span><span class="of-our">of our</span> <span class="text-feature">Features</span></h3>
+           <p class="teams-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, veniam minima! Sunt esse architecto iste rerum at nihil cum, quisquam impedit? Sequi optio voluptates esse officia ullam voluptate dicta corporis?</p>
+
+           <button class="btn-primary">Explore More</button>
+
+         </div>
+        </section>
 
     </main>
     <footer>
