team section responsive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            <div class="banner-content">
             <h1 class="banner-title">Brand New Group of Architect</h1>
          
-            <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor earum rem tempore, corrupti in non adipisci possimus, voluptatibus velit mollitia maxime dicta necessitatibus, dolorum perferendis? Mollitia autem nam cupiditate ducimus!</p>
+            <p class="banner-color-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor earum rem tempore, corrupti in non adipisci possimus, voluptatibus velit mollitia maxime dicta necessitatibus, dolorum perferendis? Mollitia autem nam cupiditate ducimus!</p>
    
             <button class="btn-primary">Explore More</button>
            </div>
@@ -45,7 +45,7 @@
 
             <div class="teams-content">
                 <h3 class="teams-title"><span class="list-quick">Quick List </span><span class="of-our">of our</span> <span class="text-feature">Features</span></h3>
-           <p class="teams-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, veniam minima! Sunt esse architecto iste rerum at nihil cum, quisquam impedit? Sequi optio voluptates esse officia ullam voluptate dicta corporis?</p>
+           <p class="banner-color-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, veniam minima! Sunt esse architecto iste rerum at nihil cum, quisquam impedit? Sequi optio voluptates esse officia ullam voluptate dicta corporis?</p>
 
            <button class="btn-primary">Explore More</button>
 
