started share css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header Start-->
     <header>
          <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title ">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -50,7 +50,19 @@
            <button class="btn-primary">Explore More</button>
 
          </div>
+
         </section>
+
+        <!--Feature section-->
+
+        <section class="feature">
+
+        </section>
+        <!-----Facts Section---->
+        <saction class="facts">
+            <h3 class="section-title ">Some Facts</h3>
+            <p class="banner-color-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et facilis laudantium dolore laborum eligendi incidunt id possimus at architecto.</p>
+        </saction>
 
     </main>
     <footer>
