finish the website

--- a/index.html
+++ b/index.html
@@ -57,11 +57,39 @@
 
         <section class="feature">
 
+            <div class="feature-content">
+                    <h3 class="section-title">Features you will <br> love and enjoy</h3>
+             <p class="banner-color-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis, error aliquid expedita iure placeat quia eius consectetur quam quidem beatae ipsum ipsam illo.</p>
+
+             <div class="card">
+
+                <h4>Desktop and Mobile version</h4>
+                <p class="banner-color-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sint incidunt eos fuga labore repudiandae doloribus rem quam maiores perferendis, possimus, ad sunt, deleniti repellat enim est corrupti illum modi.</p>
+                <h4>Desktop and Mobile version</h4>
+                <p class="banner-color-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sint incidunt eos fuga labore repudiandae doloribus rem quam maiores perferendis, possimus, ad sunt, deleniti repellat enim est corrupti illum modi.</p>
+                <h4>Desktop and Mobile version</h4>
+                <p class="banner-color-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sint incidunt eos fuga labore repudiandae doloribus rem quam maiores perferendis, possimus, ad sunt, deleniti repellat enim est corrupti illum modi.</p>
+                <h4>Desktop and Mobile version</h4>
+                <p class="banner-color-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sint incidunt eos fuga labore repudiandae doloribus rem quam maiores perferendis, possimus, ad sunt, deleniti repellat enim est corrupti illum modi.</p>
+             </div>
+                
+            </div>
+            <div class="feature-img">
+
+                <img src="images/architect.png" alt="">
+
+                <div class="ten-years">
+                    <h2>10+Years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+
         </section>
         <!-----Facts Section---->
         <saction class="facts">
             <h3 class="section-title ">Some Facts</h3>
             <p class="banner-color-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et facilis laudantium dolore laborum eligendi incidunt id possimus at architecto.</p>
+            <br>
 
             <div class="facts-card-container">
                 <!---.card*4>img+h2.card-stats+p.card-title-->
